--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "react-router-dom": "^6.10.0",
     "sass": "^1.61.0"
   }
